<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fullscreen_content_controls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:showDividers="middle">

        <Button
            android:id="@+id/home_option"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_btn_bg"
            android:text="@string/home_screen_option"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/lock_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/ripple_btn_bg"
            android:text="@string/lock_screen_option"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/home_lock_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/ripple_btn_bg"
            android:text="@string/home_and_lock_screens_option"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/back_option"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_btn_bg"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />
</LinearLayout>